cambio de idea para la info

--- a/assets/sass/style1.sass
+++ b/assets/sass/style1.sass
@@ -1,7 +1,7 @@
 body
     margin: 0
     padding: 0
-    background-image: url('/assets/fondo_inicio.jpg')
+    background-image: url('/assets/fondos/fondo_inicio.jpg')
     background-size: cover
     background-position: center
     background-attachment: fixed
