--- a/css/style2.css
+++ b/css/style2.css
@@ -39,4 +39,4 @@ body .caja .cubos .caja_cubos .nombres_cubos {
   bottom: -30px;
   left: 50%;
   transform: translateX(-50%);
-}/*# sourceMappingURL=style2.css.map */
+}
