--- a/assets/sass/style1.sass
+++ b/assets/sass/style1.sass
@@ -10,13 +10,23 @@ body
 
     .caja_boton 
         display: flex
-        flex-direction: row
+        flex-direction: column
         justify-content: center
         align-items: center
-        height: 100vh
+        width: 100%
         position: absolute
-        top: 20%
-        left: 40%
+        top: 47%
+        &:hover
+            transform: scale(1.05)
+
+    .caja_reglas
+        display: flex
+        flex-direction: columns
+        justify-content: center
+        align-items: center
+        width: 100%
+        position: absolute
+        top: 73%
         &:hover
             transform: scale(1.05)
 
