--- a/css/style3.css
+++ b/css/style3.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("/assets/fondos/olas.jpg");
+  background-image: url("/fondos/olas.jpg");
   height: 100vh;
   background-position: center;
   overflow: hidden;
