--- a/sass/style2.sass
+++ b/sass/style2.sass
@@ -1,7 +1,7 @@
 body
     margin: 0
     padding: 0
-    background-image: url('/assets/fondos/fondo_elegir.jpg')
+    background-image: url('/fondos/fondo_elegir.jpg')
     background-size: cover
     background-position: center
     background-attachment: fixed
@@ -15,7 +15,7 @@ body
         align-items: center
         height: 100vh
         position: fixed
-        left: 30%
+        left: 28%
         bottom: 15%
 
         .cubos
@@ -25,15 +25,21 @@ body
             align-items: center
 
             .caja_cubos
-                padding: 10%
+                padding-right: 9%
                 &:hover
                     transform: scale(1.05)
                     .nombres_cubos
-                        visibility: visible // Hacer las imágenes visibles al hacer hover
+                        visibility: visible 
+                        width: 80%
+                        height: auto
                     
                 .nombres_cubos
-                    visibility: hidden // Ocultar las imágenes por defecto
-                    position: absolute
-                    bottom: -30px // Ajuste de la posición vertical
-                    left: 50%
-                    transform: translateX(-50%) // Centrar horizontalmente
+                    visibility: hidden 
+                    position: fixed
+                    top: 110%
+                    left: 10%
+                
+                .img_cubos
+                    width: auto
+                    height: 20vh
+                    
