--- a/sass/style1.sass
+++ b/sass/style1.sass
@@ -1,7 +1,7 @@
 body
     margin: 0
     padding: 0
-    background-image: url('/fondos/fondo_inicio.jpg')
+    background-image: url('/sprites/fondo_inicio.jpg')
     background-size: cover
     background-position: center
     background-attachment: fixed
@@ -16,6 +16,9 @@ body
         width: 100%
         position: absolute
         top: 47%
+        img
+            width: auto
+            height: 20vh
         &:hover
             transform: scale(1.05)
 
@@ -27,6 +30,9 @@ body
         width: 100%
         position: absolute
         top: 73%
+        img
+            width: auto
+            height: 20vh
         &:hover
             transform: scale(1.05)
 
@@ -34,3 +40,6 @@ body
         position: absolute
         bottom: 5% 
         right: 5%
+        img
+            width: auto
+            height: 10vh
