--- a/sass/style3.sass
+++ b/sass/style3.sass
@@ -1,8 +1,8 @@
 body
-    background-image: url('/fondos/olas.jpg')
+    background-image: url('/sprites/olas.jpg')
     height: 100vh
     background-position: center
-    overflow: hidden
+    
 
     .container
         display: flex
@@ -28,8 +28,11 @@ body
         flex-direction: column
         justify-content: center
         align-items: center
-        width: 100%
-        position: absolute
-        bottom: 5%
+        width: 100%º
+        img
+            width: auto
+            height: 20vh
+
         &:hover
-            transform: scale(1.05)
+            transform: scale(1.01)
+            
