--- a/css/style3.css
+++ b/css/style3.css
@@ -1,8 +1,8 @@
+@charset "UTF-8";
 body {
-  background-image: url("/fondos/olas.jpg");
+  background-image: url("/sprites/olas.jpg");
   height: 100vh;
   background-position: center;
-  overflow: hidden;
 }
 body .container {
   display: flex;
@@ -30,10 +30,12 @@ body .boton_volver {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 100%;
-  position: absolute;
-  bottom: 5%;
+  width: 100% º;
+}
+body .boton_volver img {
+  width: auto;
+  height: 20vh;
 }
 body .boton_volver:hover {
-  transform: scale(1.05);
+  transform: scale(1.01);
 }
