--- a/css/style1.css
+++ b/css/style1.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  background-image: url("sprites/fondo_inicio.jpg");
+  background-image: url("ecobird/sprites/fondo_inicio.jpg");
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
@@ -48,4 +48,4 @@ body .boton_ajustes {
 body .boton_ajustes img {
   width: auto;
   height: 10vh;
-}/*# sourceMappingURL=style1.css.map */
+}
