No me funciona el compilador

--- a/sass/style2.sass
+++ b/sass/style2.sass
@@ -1,7 +1,7 @@
 body
     margin: 0
     padding: 0
-    background-image: url('ecobird/sprites/fondo_elegir.jpg')
+    background-image: url('/sprites/fondo_elegir.jpg')
     background-size: cover
     background-position: center
     background-attachment: fixed
@@ -16,7 +16,7 @@ body
         height: 100vh
         position: fixed
         left: 28%
-        bottom: 15%
+        bottom: 13%
 
         .cubos
             display: flex
