--- a/css/style3.css
+++ b/css/style3.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 body {
-  background-image: url("ecobird/sprites/olas.jpg");
+  background-image: url("sprites/olas.jpg");
   height: 100vh;
   background-position: center;
 }
