--- a/sass/style1.sass
+++ b/sass/style1.sass
@@ -1,7 +1,7 @@
 body
     margin: 0
     padding: 0
-    background-image: url('ecobird/sprites/fondo_inicio.jpg')
+    background-image: url('sprites/fondo_inicio.jpg')
     background-size: cover
     background-position: center
     background-attachment: fixed
