--- a/sass/style3.sass
+++ b/sass/style3.sass
@@ -1,5 +1,5 @@
 body
-    background-image: url('ecobird/sprites/olas.jpg')
+    background-image: url('sprites/olas.jpg')
     height: 100vh
     background-position: center
     
